
********************************************************************************

  Project : SHTRIH-M JavaPOS fiscal printer driver
  Company : SHTRIH-M www.shtrih-m.ru (495) 787-6090

********************************************************************************

  July 6 2017, 13:00
  deviceServiceVersion = 1013445
	
  [+] Added parameter quantityCorrectionEnabled
  
********************************************************************************
  July 6 2017, 3:08
  deviceServiceVersion = 1013444
	
  [+] Added FP to FSFindDocument

********************************************************************************

  July 5 2017, 22:00
  deviceServiceVersion = 1013443
	
  [+] Added receipt type constants
    SMFPTR_RT_SALE      = 100;
    SMFPTR_RT_BUY       = 101;
    SMFPTR_RT_RETSALE   = 102;
    SMFPTR_RT_RETBUY    = 103;
  
********************************************************************************

  June 29 2017, 14:30
  deviceServiceVersion = 1013439
	
  [-] Fixed error with discounts
  
********************************************************************************

  June 26 2017, 11:30
  deviceServiceVersion = 1013438
	
  [-] Fixed error with sale v2 command
  
********************************************************************************

  June 19 2017, 14:00
  deviceServiceVersion = 1013437
	
  [-] Fixed error with receipt items without discounts
  
********************************************************************************

  June 16 2017, 22:20
  deviceServiceVersion = 1013436
	
  [-] Fixed error with receipt item splitting
  
********************************************************************************

  June 11 2017, 21:40
  deviceServiceVersion = 1013433
	
  [+] Added command 0xFF46, print receipt item v2
  [+] Barcode can be printed after receipt end
  
********************************************************************************

  June 5 2017, 17:50
  deviceServiceVersion = 1013430
	