@@ -104,7 +104,7 @@ public class SMFiscalPrinterImpl implements SMFiscalPrinter, PrinterConst {
     private PrinterModelParameters modelParameters = null;
 
     public SMFiscalPrinterImpl(PrinterPort port, PrinterProtocol device,
-            FptrParameters params, FiscalPrinterImpl service) {
+                               FptrParameters params, FiscalPrinterImpl service) {
         this.port = port;
         this.device = device;
         this.params = params;
@@ -310,9 +310,9 @@ public class SMFiscalPrinterImpl implements SMFiscalPrinter, PrinterConst {
 
     private boolean isReceiptCommand(PrinterCommand command) throws Exception {
         int[] codes = {
-            0x80, 0x81, 0x82, 0x83, 0x84, 0x85, 0x86, 0x87, 0x88, 0x89,
-            0x8A, 0x8B, 0x8C, 0x8D, 0x8E, 0x8F,
-            0xFF0C, 0xFF0D, 0x12, 0x17, 0x2F
+                0x80, 0x81, 0x82, 0x83, 0x84, 0x85, 0x86, 0x87, 0x88, 0x89,
+                0x8A, 0x8B, 0x8C, 0x8D, 0x8E, 0x8F,
+                0xFF0C, 0xFF0D, 0x12, 0x17, 0x2F
         };
         for (int i = 0; i < codes.length; i++) {
             if (command.getCode() == codes[i]) {
@@ -595,7 +595,7 @@ public class SMFiscalPrinterImpl implements SMFiscalPrinter, PrinterConst {
     }
 
     public int writeTable(int tableNumber, int rowNumber, int fieldNumber,
-            String fieldValue) throws Exception {
+                          String fieldValue) throws Exception {
         int result = 0;
         logger.debug("writeTable(" + String.valueOf(tableNumber) + ", "
                 + String.valueOf(rowNumber) + ", "
@@ -667,7 +667,7 @@ public class SMFiscalPrinterImpl implements SMFiscalPrinter, PrinterConst {
     }
 
     public int readTable(int tableNumber, int rowNumber, int fieldNumber,
-            String[] fieldValue) throws Exception {
+                         String[] fieldValue) throws Exception {
         int result = 0;
         logger.debug("readTable(" + String.valueOf(tableNumber) + ", "
                 + String.valueOf(rowNumber) + ", "
@@ -903,7 +903,7 @@ public class SMFiscalPrinterImpl implements SMFiscalPrinter, PrinterConst {
     }
 
     public PrintEJDayReportOnDates printEJDayReportOnDates(EJDate date1,
-            EJDate date2, int reportType) throws Exception {
+                                                           EJDate date2, int reportType) throws Exception {
         logger.debug("printEJDayReportOnDates");
         PrintEJDayReportOnDates command = new PrintEJDayReportOnDates();
         command.setPassword(sysPassword);
@@ -915,7 +915,7 @@ public class SMFiscalPrinterImpl implements SMFiscalPrinter, PrinterConst {
     }
 
     public PrintFMReportDates printFMReportDates(PrinterDate date1,
-            PrinterDate date2, int reportType) throws Exception {
+                                                 PrinterDate date2, int reportType) throws Exception {
         logger.debug("printFMReportDates");
         PrintFMReportDates command = new PrintFMReportDates();
         command.setPassword(taxPassword);
@@ -927,7 +927,7 @@ public class SMFiscalPrinterImpl implements SMFiscalPrinter, PrinterConst {
     }
 
     public PrintEJDayReportOnDays printEJReportDays(int day1, int day2,
-            int reportType) throws Exception {
+                                                    int reportType) throws Exception {
         logger.debug("printEJReportDays");
         PrintEJDayReportOnDays command = new PrintEJDayReportOnDays();
         command.setPassword(sysPassword);
@@ -939,7 +939,7 @@ public class SMFiscalPrinterImpl implements SMFiscalPrinter, PrinterConst {
     }
 
     public PrintFMReportDays printFMReportDays(int day1, int day2,
-            int reportType) throws Exception {
+                                               int reportType) throws Exception {
         logger.debug("printFMReportDays");
         PrintFMReportDays command = new PrintFMReportDays();
         command.setPassword(taxPassword);
@@ -1434,7 +1434,7 @@ public class SMFiscalPrinterImpl implements SMFiscalPrinter, PrinterConst {
         logger.debug("waitForPrinting");
         PrinterStatus status = null;
         try {
-            for (;;) {
+            for (; ; ) {
                 status = readPrinterStatus();
                 switch (status.getSubmode()) {
                     case ECR_SUBMODE_IDLE: {
@@ -1545,7 +1545,7 @@ public class SMFiscalPrinterImpl implements SMFiscalPrinter, PrinterConst {
     }
 
     public boolean connectDevice(int baudRate, int deviceBaudRate,
-            int deviceByteTimeout) throws Exception {
+                                 int deviceByteTimeout) throws Exception {
         setBaudRate(baudRate);
         LongPrinterStatus status = readLongStatus();
         writePortParams(status.getPortNumber(),
@@ -2153,7 +2153,7 @@ public class SMFiscalPrinterImpl implements SMFiscalPrinter, PrinterConst {
             if (barcode.getType() != SmFptrConst.SMFPTR_BARCODE_EAN13) {
                 throw new Exception(
                         Localizer
-                        .getString(Localizer.PrinterSupportesEAN13Only));
+                                .getString(Localizer.PrinterSupportesEAN13Only));
             }
 
             if (barcode.isTextAbove()) {
@@ -2507,8 +2507,8 @@ public class SMFiscalPrinterImpl implements SMFiscalPrinter, PrinterConst {
         if (imageWidth > maxGraphicsWidth) {
             throw new Exception(
                     Localizer.getString(Localizer.InvalidImageWidth) + ", "
-                    + String.valueOf(imageWidth) + " > "
-                    + String.valueOf(maxGraphicsWidth));
+                            + String.valueOf(imageWidth) + " > "
+                            + String.valueOf(maxGraphicsWidth));
         }
     }
 
@@ -2525,9 +2525,9 @@ public class SMFiscalPrinterImpl implements SMFiscalPrinter, PrinterConst {
         byte[] SEPARATOR_PATTERN_BLACK = {(byte) 0xFF};
         byte[] SEPARATOR_PATTERN_WHITE = {0x00};
         byte[] SEPARATOR_PATTERN_DOTTED_1 = {(byte) 0xFF, (byte) 0xFF,
-            (byte) 0xFF, 0x00, 0x00, 0x00};
+                (byte) 0xFF, 0x00, 0x00, 0x00};
         byte[] SEPARATOR_PATTERN_DOTTED_2 = {(byte) 0xFF, (byte) 0xFF,
-            (byte) 0xFF, (byte) 0xFF, 0x00, 0x00, 0x00, 0x00};
+                (byte) 0xFF, (byte) 0xFF, 0x00, 0x00, 0x00, 0x00};
         byte[] pattern;
 
         switch (separatorType) {
@@ -2773,8 +2773,8 @@ public class SMFiscalPrinterImpl implements SMFiscalPrinter, PrinterConst {
         if (image.getWidth() > getMaxGraphicsWidth()) {
             throw new Exception(
                     Localizer.getString(Localizer.InvalidImageWidth) + ", "
-                    + String.valueOf(image.getWidth()) + " > "
-                    + String.valueOf(getMaxGraphicsWidth()));
+                            + String.valueOf(image.getWidth()) + " > "
+                            + String.valueOf(getMaxGraphicsWidth()));
         }
         // write image to device
         if (getCapLoadGraphics3()) {
@@ -3249,11 +3249,11 @@ public class SMFiscalPrinterImpl implements SMFiscalPrinter, PrinterConst {
     }
 
     private static String[] docNames = {
-        "ПРОДАЖА", "ПОКУПКА", "ВОЗВРАТ ПРОДАЖИ", "ВОЗВРАТ ПОКУПКИ"
+            "ПРОДАЖА", "ПОКУПКА", "ВОЗВРАТ ПРОДАЖИ", "ВОЗВРАТ ПОКУПКИ"
     };
 
     private static String[] fsDocNames = {
-        "ПРИХОД", "РАСХОД", "ВОЗВРАТ ПРИХОДА", "ВОЗВРАТ РАСХОДА"
+            "ПРИХОД", "РАСХОД", "ВОЗВРАТ ПРИХОДА", "ВОЗВРАТ РАСХОДА"
     };
 
     public String getReceiptName(int receiptType) {
@@ -3355,7 +3355,7 @@ public class SMFiscalPrinterImpl implements SMFiscalPrinter, PrinterConst {
     }
 
     public Vector<FSTicket> fsReadTickets(int firstFSDocumentNumber,
-            int documentCount) throws Exception {
+                                          int documentCount) throws Exception {
         Vector<FSTicket> tickets = new Vector<FSTicket>();
         FSReadStatus status = fsReadStatus();
         long lastFSDocumentNumber = status.getDocNumber();
@@ -3408,11 +3408,50 @@ public class SMFiscalPrinterImpl implements SMFiscalPrinter, PrinterConst {
      */
     public FDOParameters readFDOParameters() throws Exception {
         if (capFiscalStorage) {
-            String host = readTable(15, 1, 1);
-            String port = readTable(15, 1, 2);
-            return new FDOParameters(host, port);
+
+            final int tableNumber = 15;
+
+            //final int tableNumber = readPrinterModelParameters().OFDTable;
+            final int hostField = 1;
+            final int portField = 2;
+            final int pollPeriodField = 3;
+
+
+            String host = readTable(tableNumber, 1, hostField);
+
+            int portValue = readTableIntValueFromStringOrInt(tableNumber, portField);
+            int pollPeriod = readTableIntValueFromStringOrInt(tableNumber, pollPeriodField);
+            
+            return new FDOParameters(host, portValue, pollPeriod);
         }
+        
         return null;
+    }
+
+    private int readTableIntValueFromStringOrInt(int tableNumber, int portField) throws Exception {
+        String port = readTable(tableNumber, 1, portField);
+
+        FieldInfo fieldInfo = readFieldInfo(tableNumber, portField);
+        int portValue;
+        if(fieldInfo.isInteger()) {
+            byte[] bytes = fieldInfo.fieldToBytes(port,charsetName);
+            portValue= FieldInfo.bytesToInt(bytes, bytes.length);
+        }
+        else{
+            portValue = Integer.valueOf(port);
+        }
+        return portValue;
+    }
+
+    public FieldInfo readFieldInfo(int table, int field) throws Exception {
+        ReadFieldInfo command = new ReadFieldInfo();
+        command.setPassword(sysPassword);
+        command.setTable(table);
+        command.setField(field);
+        int result = executeCommand(command);
+        check(result);
+
+        return command.getFieldInfo();
     }
 
     public void printSeparator(int separatorType, int height) throws Exception {
